2008-10-23  Henri Häkkinen  <henux@users.sourceforge.net>

	* about.c (show_about_box): Fixed the website URL.
	* rssfeed.c: Shows errors on the menu for invalid feeds.
	Rewrote the debug and error messages.
	Version 0.1.2.

2008-10-22  Henri Häkkinen  <henux@users.sourceforge.net>

	* about.c (show_about_box): Added about box functionality.
	* rssfeed.c (on_open_url): Opens URLs using 'xdg-open'.
	* rssfeed.c (parse_channel_element): Changes the title of the menu
	item according to the RSS feed's title.
	* src/Makefile.am: Added common.h and rssfeed.h to _SOURCES.
	Added GNU build system files.
	Versions 0.1 and 0.1.1.

2008-10-20  Henri Häkkinen  <henux@users.sourceforge.net>

	* rssfeed.c (rss_feed_parser): The feed parser now works in a
	background thread.

2008-10-19  Henri Häkkinen  <henux@users.sourceforge.net>

	* rssfeed.c: Rewrote the parser to use libxml2.  Changed to create
	menu from the feed.
	* main.c (create_feed_menu): Constructs the feed menu from the
	feed XML at the program startup.

2008-10-18  Henri Häkkinen  <henux@users.sourceforge.net>

	* rssfeed.c: Initial implementation of RSS feed parser.

2008-10-17  Henri Häkkinen  <henux@users.sourceforge.net>

	* main.c: Initial implementations of the system tray and
	application menu functionality.